# sony-wf1000xm5-controller

./: .gitignore  Cargo.toml  README.md  controller-gui-4b6d9b52d3ff5b32.js  controller-gui-4b6d9b52d3ff5b32_bg.wasm  controller-gui-9fdba7ae4c04ffb6.js  controller-gui-9fdba7ae4c04ffb6_bg.wasm  dist-workspace.toml  index.html
.github/workflows/: pages.yml
controller-gui/: Cargo.toml  index.html
controller-gui/src/: app.rs  async_resource.rs  device_picker.rs  headphone_thread.rs  headphone_ui.rs  lib.rs  main.rs
sony-wf1000xm5/: Cargo.toml
sony-wf1000xm5/src/: command.rs  frame_parser.rs  lib.rs  message.rs  payload.rs
