[package]
name = "controller-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17.4", features = ["full"] }
eframe = "0.32.3"
tokio = { version = "1.47.1", features = ["macros"] }
sony-wf1000xm5 = { path = "../sony-wf1000xm5" }
winit = "0.30.12"
futures = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"
