[package]
name = "controller-gui"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/usering-around/sony-wf1000xm5-controller"

[dependencies]
eframe = { version = "0.32.3", features = ["persistence"] }
sony-wf1000xm5 = { path = "../sony-wf1000xm5" }
futures = "0.3.31"
log = "0.4.28"
anyhow = "1.0.100"
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt", "io-util", "time", "sync"] }
tokio-util = { version = "0.7.17", features = ["compat"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bluer = { version = "0.17.4", features = ["full"] }
winit = "0.30.12"
env_logger = "0.11.8"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version ="0.3.70", features = ["Serial", "SerialPortRequestOptions", "SerialPort", "SerialOptions", "WritableStream", "ReadableStream"] } 
wasm-streams = "0.4.2"
gloo-timers = { version = "0.3.0", features = ["futures"] }
